--- a/Youtube-E-Commerce/core/locale/en/LC_MESSAGES/django.po
+++ b/Youtube-E-Commerce/core/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-02-20 20:59+0300\n"
+"POT-Creation-Date: 2024-02-21 22:12+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,10 +18,122 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
+#: .\AppEcommerce\templates\category.html:16
+msgid "Markalar"
+msgstr "Brands"
+
+#: .\AppEcommerce\templates\category.html:38
+msgid "Renkler"
+msgstr "Colors"
+
+#: .\AppEcommerce\templates\category.html:58
+msgid "Kasa Şekilleri"
+msgstr "Case Shapes"
+
+#: .\AppEcommerce\templates\category.html:78
+msgid "Kayış Tipleri"
+msgstr "Strap Types"
+
+#: .\AppEcommerce\templates\category.html:98
+msgid "Cam Özellikleri"
+msgstr "Glass Properties"
+
+#: .\AppEcommerce\templates\category.html:118
+msgid "Tarzlar"
+msgstr "Styles"
+
+#: .\AppEcommerce\templates\category.html:138
+msgid "Mekanizmalar"
+msgstr "Mechanisms"
+
+#: .\AppEcommerce\templates\category.html:158
+msgid "Fiyat"
+msgstr "Price"
+
 #: .\AppEcommerce\templates\index.html:124
-msgid "Mobil Ürünler"
-msgstr "Mobile Product"
+msgid "Kadın Saatleri"
+msgstr "Women's Watches"
 
 #: .\AppEcommerce\templates\index.html:126
-msgid "Tüm Mobil Ürünler"
-msgstr "All Mobile Products"
+msgid "Tüm Kadın Saatleri"
+msgstr "All Women's Watches"
+
+#: .\AppEcommerce\templates\index.html:144
+#: .\AppEcommerce\templates\index.html:190
+msgid "Sepete Ekle"
+msgstr "Add to Basket"
+
+#: .\AppEcommerce\templates\index.html:172
+msgid "Erkek Saatleri"
+msgstr "Men's Watches"
+
+#: .\AppEcommerce\templates\index.html:174
+msgid "Tüm Erkek Saatleri"
+msgstr "All Men's Watches"
+
+#: .\AppEcommerce\templates\partials\_header.html:61
+msgid "Anasayfa"
+msgstr "Home"
+
+#: .\AppEcommerce\templates\partials\_header.html:64
+msgid "Kadın Saat"
+msgstr "Women's Watch"
+
+#: .\AppEcommerce\templates\partials\_header.html:67
+msgid "Erkek Saat"
+msgstr "Man's Watch"
+
+#: .\AppEcommerce\templates\partials\_header.html:70
+msgid "Çocuk Saat"
+msgstr "Kid's Clock"
+
+#: .\AppEcommerce\templates\partials\_header.html:73
+msgid "Akıllı Saat"
+msgstr "Smart Watch"
+
+#: .\AppEcommerce\templates\partials\_header.html:96
+msgid "Türkçe"
+msgstr "Turkey"
+
+#: .\AppEcommerce\templates\partials\_header.html:100
+msgid "İngilize"
+msgstr "English"
+
+#: .\AppEcommerce\templates\partials\_header.html:161
+#: .\AppEcommerce\templates\user\login.html:9
+msgid "GİRİŞ YAP"
+msgstr "LOGIN"
+
+#: .\AppEcommerce\templates\partials\_header.html:166
+msgid "ÜYE OL"
+msgstr "REGISTER"
+
+#: .\AppEcommerce\templates\user\login.html:15
+#: .\AppEcommerce\templates\user\register.html:23
+msgid "E-Posta Adresi"
+msgstr "E-mail address"
+
+#: .\AppEcommerce\templates\user\login.html:19
+#: .\AppEcommerce\templates\user\register.html:27
+msgid "Şifre"
+msgstr "Password"
+
+#: .\AppEcommerce\templates\user\login.html:22
+msgid "Giriş Yap"
+msgstr "LOGIN"
+
+#: .\AppEcommerce\templates\user\register.html:9
+msgid "KAYIT OL"
+msgstr "REGİSTER"
+
+#: .\AppEcommerce\templates\user\register.html:15
+msgid "Ad"
+msgstr "Name"
+
+#: .\AppEcommerce\templates\user\register.html:19
+msgid "Soyad"
+msgstr "Surname"
+
+#: .\AppEcommerce\templates\user\register.html:30
+msgid "Kayıt Ol"
+msgstr "REGISTER"
